Add Part 1d - Submit Data to Express App Using HTML Form

--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -7,6 +7,11 @@
 <body>
  
     {{{body}}}
- 
+    <form action="/submit" method="post">
+        <label for="name">Insert item to add to the list:</label><br>
+        <input type="text" id="name" name="name">
+        <input type="submit" value="Add Item">
+    </form>
+
 </body>
 </html>
