--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -2,10 +2,11 @@
 <html>
 <head>
     <meta charset="utf-8">
-    <title>Example App</title>
+    <title>To-Do-List App</title>
 </head>
 <body>
- 
+    <h1>Welcome to the To-Do-List App!</h1>
+    <br/>
     {{{body}}}
  
 </body>
